--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "private": false,
   "dependencies": {
     "@types/jest": "^26.0.12",
-    "@types/node": "^14.6.2"
+    "@types/node": "^14.6.2",
+    "ts-jest": "^26.5.4"
   },
   "scripts": {
     "test": "jest --watch",
@@ -24,7 +25,6 @@
   ],
   "devDependencies": {
     "jest": "^26.4.2",
-    "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
   }
 }
