--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@types/jest": "^26.0.12",
     "@types/node": "^14.6.2",
+    "dstructures.js": "^1.0.0",
     "ts-jest": "^26.5.4"
   },
   "scripts": {
